<resources>
    <string name="app_name">SeatBack</string>
    <string name="info">info</string>
    <string name="week">Week</string>
    <string name="shows_day_statistics">shows day statistics</string>
    <string name="day">Day</string>
    <string name="shows_week_statistics">shows week statistics</string>
    <string name="shows_month_statistics">shows month statistics</string>
    <string name="shows_all_statistics">shows all statistics</string>
    <string name="all">All</string>
    <string name="month">Month</string>
    <string name="shows_statistics_image">shows_statistics_image</string>
    <string name="bluetooth">Connect to device</string>
    <string name="standing">standing</string>
    <string name="bending">bending forward</string>
    <string name="good_posture">good</string>
    <string name="leg">leg</string>
    <string name="slouching">slouching</string>
    <string name="circle_Sitting_time">Daily Connected time</string>
    <string name="sensors_seat">Seat</string>
    <string name="sensors_back">Back</string>
    <string name="sensors_unknown">Unknown</string>
    <string name="workout_top_left">Lower Back</string>
    <string name="workout_top_middle">Shoulders</string>
    <string name="workout_top_right">Elbows</string>
    <string name="workout_middle_left">Shoulders</string>
    <string name="workout_middle_middle">Upper back</string>
    <string name="workout_middle_right">Neck</string>
    <string name="workout_bottom_left">Shoulder bladesPalms</string>
    <string name="workout_bottom_middle">Lower Back</string>
    <string name="workout_bottom_right">Palms</string>
    <string name="version_number">Version:</string>
    <string name="tilt_right">Tilt Right</string>
    <string name="tilt_left">Tilt Left</string>
    <string name="no_data_to_show">No data for the selected period of time.</string>
    <string name="bad_posture">Bad posture</string>
    <string name="not_connected">Not Connected to chair</string>
</resources>
