<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ImageViewWithPrecentage="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_white">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:id="@+id/full_workout_images">
    <LinearLayout
        android:id="@+id/top_layout"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="@dimen/_125sdp"
        android:weightSum="3"
        android:gravity="center">
        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="@dimen/_125sdp"
            android:layout_weight="1">
            <RelativeLayout
                android:layout_width="match_parent"
                android:weightSum="1"
                android:layout_height="match_parent">
                <seatback.com.seatback.utils.ImageViewWithPrecentage
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="true"
                    ImageViewWithPrecentage:precentage="0.7"
                    android:id="@+id/img_exercise_top_left"  />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/img_exercise_top_left"
                    android:gravity="center_horizontal"
                    android:layout_gravity="center_vertical"
                    android:text="@string/workout_top_left"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

            </RelativeLayout>
        </FrameLayout>
        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="@dimen/_125sdp"
            android:layout_weight="1">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <seatback.com.seatback.utils.ImageViewWithPrecentage
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:clickable="true"
                    ImageViewWithPrecentage:precentage="0.7"
                    android:id="@+id/img_exercise_top_middle"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/img_exercise_top_middle"
                    android:gravity="center_horizontal"
                    android:layout_gravity="center_vertical"
                    android:text="@string/workout_top_middle"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </RelativeLayout>
        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="@dimen/_125sdp"
            android:layout_weight="1">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <seatback.com.seatback.utils.ImageViewWithPrecentage
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:clickable="true"
                    ImageViewWithPrecentage:precentage="0.7"
                    android:id="@+id/img_exercise_top_right"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/img_exercise_top_right"
                    android:gravity="center_horizontal"
                    android:layout_gravity="center_vertical"
                    android:text="@string/workout_top_right"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

            </RelativeLayout>
        </FrameLayout>
    </LinearLayout>
    <LinearLayout
            android:id="@+id/middle_layout"
            android:layout_width="@dimen/_250sdp"
            android:layout_height="@dimen/_125sdp"
            android:weightSum="3"
            android:gravity="center">
        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="@dimen/_125sdp"
            android:layout_weight="1">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <seatback.com.seatback.utils.ImageViewWithPrecentage
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:clickable="true"
                    ImageViewWithPrecentage:precentage="0.7"
                    android:id="@+id/img_exercise_middle_left"  />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/img_exercise_middle_left"
                    android:gravity="center_horizontal"
                    android:layout_gravity="center_vertical"
                    android:text="@string/workout_middle_left"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </RelativeLayout>
        </FrameLayout>
        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="@dimen/_125sdp"
            android:layout_weight="1">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <seatback.com.seatback.utils.ImageViewWithPrecentage
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:clickable="true"
                    ImageViewWithPrecentage:precentage="0.7"
                    android:id="@+id/img_exercise_middle_right"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/img_exercise_middle_right"
                    android:gravity="center_horizontal"
                    android:layout_gravity="center_vertical"
                    android:text="@string/workout_middle_middle"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

            </RelativeLayout>
        </FrameLayout>
        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="@dimen/_125sdp"
            android:layout_weight="1">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <seatback.com.seatback.utils.ImageViewWithPrecentage
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:clickable="true"
                    ImageViewWithPrecentage:precentage="0.7"
                    android:id="@+id/img_exercise_middle_right_most"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/img_exercise_middle_right_most"
                    android:gravity="center_horizontal"
                    android:layout_gravity="center_vertical"
                    android:text="@string/workout_middle_right"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

            </RelativeLayout>
        </FrameLayout>
        </LinearLayout>
    <LinearLayout
        android:layout_width="@dimen/_250sdp"
        android:layout_height="@dimen/_125sdp"
        android:weightSum="3">
        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="@dimen/_125sdp"
            android:layout_weight="1">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <seatback.com.seatback.utils.ImageViewWithPrecentage
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:clickable="true"
                    ImageViewWithPrecentage:precentage="0.7"
                    android:id="@+id/img_exercise_bottom_left"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/img_exercise_bottom_left"
                    android:gravity="center_horizontal"
                    android:layout_gravity="center_vertical"
                    android:text="@string/workout_bottom_left"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

            </RelativeLayout>
        </FrameLayout>
        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="@dimen/_125sdp"
            android:layout_weight="1">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <seatback.com.seatback.utils.ImageViewWithPrecentage
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:clickable="true"
                    ImageViewWithPrecentage:precentage="0.7"
                    android:id="@+id/img_exercise_bottom_middle"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/img_exercise_bottom_middle"
                    android:gravity="center_horizontal"
                    android:layout_gravity="center_vertical"
                    android:text="@string/workout_bottom_middle"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

            </RelativeLayout>
        </FrameLayout>
        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="@dimen/_125sdp"
            android:layout_weight="1">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <seatback.com.seatback.utils.ImageViewWithPrecentage
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:clickable="true"
                    ImageViewWithPrecentage:precentage="0.7"
                    android:id="@+id/img_exercise_bottom_right"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/img_exercise_bottom_right"
                    android:gravity="center_horizontal"
                    android:layout_gravity="center_vertical"
                    android:text="@string/workout_bottom_right"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

            </RelativeLayout>
        </FrameLayout>
    </LinearLayout>
    </LinearLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/single_workout_image_layout"
        android:visibility="invisible">
        <seatback.com.seatback.utils.ImageViewWithPrecentage
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            ImageViewWithPrecentage:precentage="0.7"
            android:id="@+id/single_workout_image"  />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_gravity="bottom"
            android:paddingTop="30dp"
            android:text="@string/workout_top_left"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/single_workout_text"/>
    </FrameLayout>
</RelativeLayout>